# GreetingGame

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
db/: ddl.sql
inc/: Agent.h  Game.h  Greeting.h
src/: Agent.cpp  Game.cpp  main.cpp
